@@ -23,7 +23,7 @@ Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 NetPacket TEMP_PACKET;
 
 void EnqueueIncomingPacket(void *message, unsigned long message_size,
-                           Client::ID toID, Client::ID fromID )
+                           SocketClient::ID toID, SocketClient::ID fromID )
 {
     TEMP_PACKET.toID = toID;
     TEMP_PACKET.fromID = fromID;
@@ -41,7 +41,7 @@ void EnqueueIncomingPacket(void *message, unsigned long message_size,
 NetPacket TEMP_PACKET2;
 
 void EnqueueUnreliablePacket(void *message, unsigned long message_size,
-                             Client::ID toID, Client::ID fromID )
+                             SocketClient::ID toID, SocketClient::ID fromID )
 {
     TEMP_PACKET2.toID = toID;
     TEMP_PACKET2.fromID = fromID;
