@@ -1,3 +1,6 @@
+14-Oct-2003 by Matthias Braun
+-fixed crash when client disconnects or connection is lost
+
 13-Oct-2003 by Matthias Braun
 -fixed wrong const in Surface class
 -don't allow copy constructing of surface class
